<resources>
    <string name="app_name">Playlist maker</string>
    <string name="button_search">Поиск</string>
    <string name="button_media">Медиатека</string>
    <string name="button_settings">Настройки</string>
    <string name="button_settings_sharing">Поделиться приложением</string>
    <string name="button_settings_support">Написать в поддержку</string>
    <string name="button_settings_user_agreement">Пользовательское соглашение</string>
    <string name="button_settings_dark_mode">Темная тема</string>
    <string name="search_title">Поиск</string>
    <string name="share_message">Курсы: %s</string>
    <string name="share_link">https://practicum.yandex.ru/android-developer/</string>

    <string name="support_email">qu1eres@yandex.ru</string>
    <string name="support_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="support_body">Спасибо разработчикам и разработчицам за крутое приложение!</string>

    <string name="agreement_link">https://yandex.ru/legal/practicum_offer/ru/</string>

    <string name="search_title">Поиск</string>
    <string name="search_hint">Поиск</string>
    <string name="back_button_description">Кнопка Назад</string>
    <string name="clear_search_description">Очистить поле поиска</string>
</resources>