<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:theme="@style/Theme.Verstka_last.Settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/settingsBackgroundColor"
    android:orientation="vertical"
    android:id="@+id/main"
    android:paddingTop="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:paddingBottom="@dimen/button_indent">

        <com.google.android.material.button.MaterialButton
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_margin="4dp"
            android:stateListAnimator="@null"
            android:id="@+id/settings_button_back"
            app:icon="@drawable/settings_button_back"
            app:iconGravity="textEnd"
            app:iconTint="?attr/settingsIconBackColor"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="?attr/settingsTextColor"
            android:text="@string/button_settings"
            android:textSize="@dimen/heading_text"
            android:paddingStart="10dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginTop="24dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:paddingVertical="12dp"
            android:paddingHorizontal="16dp">

            <TextView
                android:textColor="?attr/settingsTextColor"
                android:fontFamily="@font/ys_display_regular"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/button_settings_dark_mode"
                android:textSize="@dimen/settings_button_text" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switch_compat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"/>
        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            style="@style/SettingsActivityStyle"
            android:id="@+id/button_share"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_settings_sharing"
            app:icon="@drawable/sharing"
            app:iconPadding="128dp" />

        <com.google.android.material.button.MaterialButton
            style="@style/SettingsActivityStyle"
            android:id="@+id/button_support"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_settings_support"
            app:icon="@drawable/support"
            app:iconPadding="152dp" />

        <com.google.android.material.button.MaterialButton
            style="@style/SettingsActivityStyle"
            android:id="@+id/button_agreement"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_settings_user_agreement"
            app:icon="@drawable/user_agreement"
            app:iconPadding="93dp" />
    </LinearLayout>

</LinearLayout>